export const schema = `
syntax = "proto2";

package org.observertc.schemas.protobuf;

message Samples {
	message SamplesMeta {
		optional string schemaVersion = 1;
	}
	message ControlFlags {
		optional bool close = 1;
	}
	message ClientSample {
		message Engine {
			optional string name = 1;
			optional string version = 2;
		}
		message Platform {
			optional string model = 1;
			optional string type = 2;
			optional string vendor = 3;
		}
		message Browser {
			optional string name = 1;
			optional string version = 2;
		}
		message OperationSystem {
			optional string name = 1;
			optional string version = 2;
			optional string versionName = 3;
		}
		message MediaDevice {
			optional string id = 1;
			optional string kind = 2;
			optional string label = 3;
		}
		message ExtensionStat {
			required string payload = 1;
			required string type = 2;
		}
		message PeerConnectionTransport {
			required string peerConnectionId = 1;
			optional uint64 bytesReceived = 2;
			optional uint64 bytesSent = 3;
			optional double candidatePairAvailableIncomingBitrate = 4;
			optional double candidatePairAvailableOutgoingBitrate = 5;
			optional uint64 candidatePairBytesDiscardedOnSend = 6;
			optional uint64 candidatePairBytesReceived = 7;
			optional uint64 candidatePairBytesSent = 8;
			optional uint32 candidatePairCircuitBreakerTriggerCount = 9;
			optional uint64 candidatePairConsentExpiredTimestamp = 10;
			optional uint64 candidatePairConsentRequestBytesSent = 11;
			optional uint32 candidatePairConsentRequestsSent = 12;
			optional double candidatePairCurrentRoundTripTime = 13;
			optional uint64 candidatePairFirstRequestTimestamp = 14;
			optional uint64 candidatePairLastPacketReceivedTimestamp = 15;
			optional uint64 candidatePairLastPacketSentTimestamp = 16;
			optional uint64 candidatePairLastRequestTimestamp = 17;
			optional uint64 candidatePairLastResponseTimestamp = 18;
			optional uint32 candidatePairPacketsDiscardedOnSend = 19;
			optional uint32 candidatePairPacketsReceived = 20;
			optional uint32 candidatePairPacketsSent = 21;
			optional uint64 candidatePairRequestBytesSent = 22;
			optional uint32 candidatePairRequestsReceived = 23;
			optional uint32 candidatePairRequestsSent = 24;
			optional uint64 candidatePairResponseBytesSent = 25;
			optional uint32 candidatePairResponsesReceived = 26;
			optional uint32 candidatePairResponsesSent = 27;
			optional uint32 candidatePairRetransmissionReceived = 28;
			optional uint32 candidatePairRetransmissionSent = 29;
			optional string candidatePairState = 30;
			optional double candidatePairTotalRoundTripTime = 31;
			optional uint32 dataChannelsAccepted = 32;
			optional uint32 dataChannelsClosed = 33;
			optional uint32 dataChannelsOpened = 34;
			optional uint32 dataChannelsRequested = 35;
			optional string dtlsCipher = 36;
			optional string dtlsState = 37;
			optional string iceLocalUsernameFragment = 38;
			optional string iceRole = 39;
			optional string iceState = 40;
			optional string label = 41;
			optional string localAddress = 42;
			optional string localCandidateICEServerUrl = 43;
			optional string localCandidateRelayProtocol = 44;
			optional string localCandidateType = 45;
			optional uint32 localPort = 46;
			optional string localProtocol = 47;
			optional uint32 packetsReceived = 48;
			optional uint32 packetsSent = 49;
			optional string remoteAddress = 50;
			optional string remoteCandidateICEServerUrl = 51;
			optional string remoteCandidateRelayProtocol = 52;
			optional string remoteCandidateType = 53;
			optional uint32 remotePort = 54;
			optional string remoteProtocol = 55;
			optional double sctpCongestionWindow = 56;
			optional uint32 sctpMtu = 57;
			optional double sctpReceiverWindow = 58;
			optional double sctpSmoothedRoundTripTime = 59;
			optional uint32 sctpUnackData = 60;
			optional uint32 selectedCandidatePairChanges = 61;
			optional string srtpCipher = 62;
			optional string tlsGroup = 63;
			optional string tlsVersion = 64;
		}
		message MediaSourceStat {
			optional double audioLevel = 1;
			optional uint32 bitDepth = 2;
			optional double echoReturnLoss = 3;
			optional double echoReturnLossEnhancement = 4;
			optional uint32 frames = 5;
			optional double framesPerSecond = 6;
			optional uint32 height = 7;
			optional string kind = 8;
			optional bool relayedSource = 9;
			optional double totalAudioEnergy = 10;
			optional double totalSamplesDuration = 11;
			optional string trackIdentifier = 12;
			optional uint32 width = 13;
		}
		message MediaCodecStats {
			optional uint32 channels = 1;
			optional uint32 clockRate = 2;
			optional string codecType = 3;
			optional string mimeType = 4;
			optional string payloadType = 5;
			optional string sdpFmtpLine = 6;
		}
		message Certificate {
			optional string base64Certificate = 1;
			optional string fingerprint = 2;
			optional string fingerprintAlgorithm = 3;
			optional string issuerCertificateId = 4;
		}
		message InboundAudioTrack {
			required uint64 ssrc = 1;
			optional double averageRtcpInterval = 2;
			optional uint32 burstDiscardCount = 3;
			optional double burstDiscardRate = 4;
			optional uint32 burstLossCount = 5;
			optional double burstLossRate = 6;
			optional uint32 burstPacketsDiscarded = 7;
			optional uint32 burstPacketsLost = 8;
			optional uint64 bytesReceived = 9;
			optional uint64 bytesSent = 10;
			optional uint32 channels = 11;
			optional uint32 clockRate = 12;
			optional uint32 concealedSamples = 13;
			optional uint32 concealmentEvents = 14;
			optional string decoderImplementation = 15;
			optional bool ended = 16;
			optional uint64 estimatedPlayoutTimestamp = 17;
			optional uint32 fecPacketsDiscarded = 18;
			optional uint32 fecPacketsReceived = 19;
			optional double gapDiscardRate = 20;
			optional double gapLossRate = 21;
			optional uint64 headerBytesReceived = 22;
			optional uint32 insertedSamplesForDeceleration = 23;
			optional double jitter = 24;
			optional double jitterBufferDelay = 25;
			optional uint32 jitterBufferEmittedCount = 26;
			optional uint64 lastPacketReceivedTimestamp = 27;
			optional string mimeType = 28;
			optional uint32 nackCount = 29;
			optional uint32 packetsDiscarded = 30;
			optional uint32 packetsDuplicated = 31;
			optional uint32 packetsFailedDecryption = 32;
			optional uint32 packetsLost = 33;
			optional uint32 packetsReceived = 34;
			optional uint32 packetsRepaired = 35;
			optional uint32 packetsSent = 36;
			optional uint32 payloadType = 37;
			optional string peerConnectionId = 38;
			optional uint32 perDscpPacketsReceived = 39;
			optional string remoteClientId = 40;
			optional uint64 remoteTimestamp = 41;
			optional uint32 removedSamplesForAcceleration = 42;
			optional uint32 reportsSent = 43;
			optional double roundTripTime = 44;
			optional uint32 roundTripTimeMeasurements = 45;
			optional uint32 samplesDecodedWithCelt = 46;
			optional uint32 samplesDecodedWithSilk = 47;
			optional string sdpFmtpLine = 48;
			optional string sfuSinkId = 49;
			optional uint32 silentConcealedSamples = 50;
			optional double totalProcessingDelay = 51;
			optional double totalRoundTripTime = 52;
			optional uint32 totalSamplesDecoded = 53;
			optional uint32 totalSamplesReceived = 54;
			optional string trackId = 55;
			optional bool voiceActivityFlag = 56;
		}
		message InboundVideoTrack {
			required uint64 ssrc = 1;
			optional double averageRtcpInterval = 2;
			optional uint32 burstDiscardCount = 3;
			optional double burstDiscardRate = 4;
			optional uint32 burstLossCount = 5;
			optional double burstLossRate = 6;
			optional uint32 burstPacketsDiscarded = 7;
			optional uint32 burstPacketsLost = 8;
			optional uint64 bytesReceived = 9;
			optional uint64 bytesSent = 10;
			optional uint32 channels = 11;
			optional uint32 clockRate = 12;
			optional string decoderImplementation = 13;
			optional bool ended = 14;
			optional uint64 estimatedPlayoutTimestamp = 15;
			optional uint32 fecPacketsDiscarded = 16;
			optional uint32 fecPacketsReceived = 17;
			optional uint32 firCount = 18;
			optional uint32 frameBitDepth = 19;
			optional uint32 frameHeight = 20;
			optional uint32 frameWidth = 21;
			optional uint32 framesDecoded = 22;
			optional uint32 framesDropped = 23;
			optional double framesPerSecond = 24;
			optional uint32 framesReceived = 25;
			optional uint32 fullFramesLost = 26;
			optional double gapDiscardRate = 27;
			optional double gapLossRate = 28;
			optional uint64 headerBytesReceived = 29;
			optional double jitter = 30;
			optional double jitterBufferDelay = 31;
			optional uint32 jitterBufferEmittedCount = 32;
			optional uint32 keyFramesDecoded = 33;
			optional uint64 lastPacketReceivedTimestamp = 34;
			optional string mimeType = 35;
			optional uint32 nackCount = 36;
			optional uint32 packetsDiscarded = 37;
			optional uint32 packetsDuplicated = 38;
			optional uint32 packetsFailedDecryption = 39;
			optional uint32 packetsLost = 40;
			optional uint32 packetsReceived = 41;
			optional uint32 packetsRepaired = 42;
			optional uint32 packetsSent = 43;
			optional uint32 partialFramesLost = 44;
			optional uint32 payloadType = 45;
			optional string peerConnectionId = 46;
			optional uint32 perDscpPacketsReceived = 47;
			optional uint32 pliCount = 48;
			optional uint64 qpSum = 49;
			optional string remoteClientId = 50;
			optional uint64 remoteTimestamp = 51;
			optional uint32 reportsSent = 52;
			optional double roundTripTime = 53;
			optional uint32 roundTripTimeMeasurements = 54;
			optional string sdpFmtpLine = 55;
			optional string sfuSinkId = 56;
			optional uint32 sliCount = 57;
			optional double totalDecodeTime = 58;
			optional double totalInterFrameDelay = 59;
			optional double totalProcessingDelay = 60;
			optional double totalRoundTripTime = 61;
			optional double totalSquaredInterFrameDelay = 62;
			optional string trackId = 63;
		}
		message OutboundAudioTrack {
			required uint64 ssrc = 1;
			optional double audioLevel = 2;
			optional double averageRtcpInterval = 3;
			optional uint32 burstDiscardCount = 4;
			optional double burstDiscardRate = 5;
			optional uint32 burstLossCount = 6;
			optional double burstLossRate = 7;
			optional uint32 burstPacketsDiscarded = 8;
			optional uint32 burstPacketsLost = 9;
			optional uint64 bytesDiscardedOnSend = 10;
			optional uint64 bytesSent = 11;
			optional uint32 channels = 12;
			optional uint32 clockRate = 13;
			optional double echoReturnLoss = 14;
			optional double echoReturnLossEnhancement = 15;
			optional string encoderImplementation = 16;
			optional bool ended = 17;
			optional uint32 fecPacketsSent = 18;
			optional double fractionLost = 19;
			optional double gapDiscardRate = 20;
			optional double gapLossRate = 21;
			optional uint64 headerBytesSent = 22;
			optional double jitter = 23;
			optional uint64 lastPacketSentTimestamp = 24;
			optional string mimeType = 25;
			optional uint32 nackCount = 26;
			optional uint32 packetsDiscarded = 27;
			optional uint32 packetsDiscardedOnSend = 28;
			optional uint32 packetsLost = 29;
			optional uint32 packetsReceived = 30;
			optional uint32 packetsRepaired = 31;
			optional uint32 packetsSent = 32;
			optional uint32 payloadType = 33;
			optional string peerConnectionId = 34;
			optional uint32 perDscpPacketsSent = 35;
			optional bool relayedSource = 36;
			optional uint32 reportsReceived = 37;
			optional uint64 retransmittedBytesSent = 38;
			optional uint32 retransmittedPacketsSent = 39;
			optional string rid = 40;
			optional double roundTripTime = 41;
			optional uint32 roundTripTimeMeasurements = 42;
			optional uint64 rtxSsrc = 43;
			optional uint32 samplesEncodedWithCelt = 44;
			optional uint32 samplesEncodedWithSilk = 45;
			optional string sdpFmtpLine = 46;
			optional string sfuStreamId = 47;
			optional uint32 targetBitrate = 48;
			optional double totalAudioEnergy = 49;
			optional uint64 totalEncodedBytesTarget = 50;
			optional double totalPacketSendDelay = 51;
			optional double totalRoundTripTime = 52;
			optional double totalSamplesDuration = 53;
			optional uint32 totalSamplesSent = 54;
			optional string trackId = 55;
			optional bool voiceActivityFlag = 56;
		}
		message OutboundVideoTrack {
			required uint64 ssrc = 1;
			optional double averageRtcpInterval = 2;
			optional uint32 bitDepth = 3;
			optional uint32 burstDiscardCount = 4;
			optional double burstDiscardRate = 5;
			optional uint32 burstLossCount = 6;
			optional double burstLossRate = 7;
			optional uint32 burstPacketsDiscarded = 8;
			optional uint32 burstPacketsLost = 9;
			optional uint64 bytesDiscardedOnSend = 10;
			optional uint64 bytesSent = 11;
			optional uint32 channels = 12;
			optional uint32 clockRate = 13;
			optional string encoderImplementation = 14;
			optional bool ended = 15;
			optional uint32 fecPacketsSent = 16;
			optional uint32 firCount = 17;
			optional double fractionLost = 18;
			optional uint32 frameBitDepth = 19;
			optional uint32 frameHeight = 20;
			optional uint32 frameWidth = 21;
			optional uint32 frames = 22;
			optional uint32 framesDiscardedOnSend = 23;
			optional uint32 framesDropped = 24;
			optional uint32 framesEncoded = 25;
			optional double framesPerSecond = 26;
			optional uint32 framesSent = 27;
			optional uint32 fullFramesLost = 28;
			optional double gapDiscardRate = 29;
			optional double gapLossRate = 30;
			optional uint64 headerBytesSent = 31;
			optional uint32 height = 32;
			optional uint32 hugeFramesSent = 33;
			optional double jitter = 34;
			optional uint32 keyFramesEncoded = 35;
			optional uint64 lastPacketSentTimestamp = 36;
			optional string mimeType = 37;
			optional uint32 nackCount = 38;
			optional uint32 packetsDiscarded = 39;
			optional uint32 packetsDiscardedOnSend = 40;
			optional uint32 packetsLost = 41;
			optional uint32 packetsReceived = 42;
			optional uint32 packetsRepaired = 43;
			optional uint32 packetsSent = 44;
			optional uint32 partialFramesLost = 45;
			optional uint32 payloadType = 46;
			optional string peerConnectionId = 47;
			optional uint32 perDscpPacketsSent = 48;
			optional uint32 pliCount = 49;
			optional uint64 qpSum = 50;
			optional double qualityLimitationDurationBandwidth = 51;
			optional double qualityLimitationDurationCPU = 52;
			optional double qualityLimitationDurationNone = 53;
			optional double qualityLimitationDurationOther = 54;
			optional string qualityLimitationReason = 55;
			optional uint32 qualityLimitationResolutionChanges = 56;
			optional bool relayedSource = 57;
			optional uint32 reportsReceived = 58;
			optional uint64 retransmittedBytesSent = 59;
			optional uint32 retransmittedPacketsSent = 60;
			optional string rid = 61;
			optional double roundTripTime = 62;
			optional uint32 roundTripTimeMeasurements = 63;
			optional uint64 rtxSsrc = 64;
			optional string sdpFmtpLine = 65;
			optional string sfuStreamId = 66;
			optional uint32 sliCount = 67;
			optional uint32 targetBitrate = 68;
			optional double totalEncodeTime = 69;
			optional uint64 totalEncodedBytesTarget = 70;
			optional double totalPacketSendDelay = 71;
			optional double totalRoundTripTime = 72;
			optional string trackId = 73;
			optional uint32 width = 74;
		}
		message IceLocalCandidate {
			optional string address = 1;
			optional string candidateType = 2;
			optional string id = 3;
			optional string peerConnectionId = 4;
			optional uint32 port = 5;
			optional uint64 priority = 6;
			optional string protocol = 7;
			optional string relayProtocol = 8;
			optional string url = 9;
		}
		message IceRemoteCandidate {
			optional string address = 1;
			optional string candidateType = 2;
			optional string id = 3;
			optional string peerConnectionId = 4;
			optional uint32 port = 5;
			optional uint64 priority = 6;
			optional string protocol = 7;
			optional string relayProtocol = 8;
			optional string url = 9;
		}
		message DataChannel {
			optional string address = 1;
			optional uint64 bytesReceived = 2;
			optional uint64 bytesSent = 3;
			optional uint32 dataChannelIdentifier = 4;
			optional string id = 5;
			optional string label = 6;
			optional uint32 messagesReceived = 7;
			optional uint32 messagesSent = 8;
			optional string peerConnectionId = 9;
			optional uint32 port = 10;
			optional string protocol = 11;
			optional string state = 12;
		}
		repeated Certificate certificates = 1;
		repeated MediaCodecStats codecs = 2;
		repeated DataChannel dataChannels = 3;
		repeated ExtensionStat extensionStats = 4;
		repeated IceLocalCandidate iceLocalCandidates = 5;
		repeated IceRemoteCandidate iceRemoteCandidates = 6;
		repeated string iceServers = 7;
		repeated InboundAudioTrack inboundAudioTracks = 8;
		repeated InboundVideoTrack inboundVideoTracks = 9;
		repeated string mediaConstraints = 10;
		repeated MediaDevice mediaDevices = 11;
		repeated MediaSourceStat mediaSources = 12;
		repeated OutboundAudioTrack outboundAudioTracks = 13;
		repeated OutboundVideoTrack outboundVideoTracks = 14;
		repeated PeerConnectionTransport pcTransports = 15;
		repeated string userMediaErrors = 16;
		required string clientId = 17;
		required uint64 timestamp = 18;
		optional Browser browser = 19;
		optional string callId = 20;
		optional Engine engine = 21;
		optional string marker = 22;
		optional OperationSystem os = 23;
		optional Platform platform = 24;
		optional string roomId = 25;
		optional uint32 sampleSeq = 26;
		optional uint32 timeZoneOffsetInHours = 27;
		optional string userId = 28;
	}
	message SfuSample {
		message SfuTransport {
			required string transportId = 1;
			optional string dtlsState = 2;
			optional string iceRole = 3;
			optional string iceState = 4;
			optional bool internal = 5;
			optional string localAddress = 6;
			optional uint32 localPort = 7;
			optional bool noReport = 8;
			optional string protocol = 9;
			optional string remoteAddress = 10;
			optional uint32 remotePort = 11;
			optional uint64 rtpBytesReceived = 12;
			optional uint64 rtpBytesSent = 13;
			optional uint32 rtpPacketsLost = 14;
			optional uint32 rtpPacketsReceived = 15;
			optional uint32 rtpPacketsSent = 16;
			optional uint64 rtxBytesReceived = 17;
			optional uint64 rtxBytesSent = 18;
			optional uint32 rtxPacketsDiscarded = 19;
			optional uint32 rtxPacketsLost = 20;
			optional uint32 rtxPacketsReceived = 21;
			optional uint32 rtxPacketsSent = 22;
			optional uint64 sctpBytesReceived = 23;
			optional uint64 sctpBytesSent = 24;
			optional uint32 sctpPacketsReceived = 25;
			optional uint32 sctpPacketsSent = 26;
			optional string sctpState = 27;
		}
		message SfuInboundRtpPad {
			required string padId = 1;
			required uint64 ssrc = 2;
			required string streamId = 3;
			required string transportId = 4;
			optional uint64 bytesReceived = 5;
			optional uint32 clockRate = 6;
			optional uint32 fecPacketsDiscarded = 7;
			optional uint32 fecPacketsReceived = 8;
			optional uint32 firCount = 9;
			optional double fractionLost = 10;
			optional uint32 framesDecoded = 11;
			optional uint32 framesReceived = 12;
			optional bool internal = 13;
			optional double jitter = 14;
			optional uint32 keyFramesDecoded = 15;
			optional string mediaType = 16;
			optional string mimeType = 17;
			optional uint32 nackCount = 18;
			optional bool noReport = 19;
			optional uint32 packetsDiscarded = 20;
			optional uint32 packetsDuplicated = 21;
			optional uint32 packetsFailedDecryption = 22;
			optional uint32 packetsLost = 23;
			optional uint32 packetsReceived = 24;
			optional uint32 packetsRepaired = 25;
			optional uint32 payloadType = 26;
			optional uint32 pliCount = 27;
			optional string rid = 28;
			optional double roundTripTime = 29;
			optional uint32 rtcpRrSent = 30;
			optional uint32 rtcpSrReceived = 31;
			optional uint32 rtxPacketsDiscarded = 32;
			optional uint32 rtxPacketsReceived = 33;
			optional uint64 rtxSsrc = 34;
			optional string sdpFmtpLine = 35;
			optional uint32 sliCount = 36;
			optional uint32 targetBitrate = 37;
			optional bool voiceActivityFlag = 38;
		}
		message SfuOutboundRtpPad {
			required string padId = 1;
			required string sinkId = 2;
			required uint64 ssrc = 3;
			required string streamId = 4;
			required string transportId = 5;
			optional uint64 bytesSent = 6;
			optional string callId = 7;
			optional string clientId = 8;
			optional uint32 clockRate = 9;
			optional uint32 fecPacketsDiscarded = 10;
			optional uint32 fecPacketsSent = 11;
			optional uint32 firCount = 12;
			optional double fractionLost = 13;
			optional uint32 framesEncoded = 14;
			optional uint32 framesSent = 15;
			optional bool internal = 16;
			optional double jitter = 17;
			optional uint32 keyFramesEncoded = 18;
			optional string mediaType = 19;
			optional string mimeType = 20;
			optional uint32 nackCount = 21;
			optional bool noReport = 22;
			optional uint32 packetsDiscarded = 23;
			optional uint32 packetsDuplicated = 24;
			optional uint32 packetsFailedEncryption = 25;
			optional uint32 packetsLost = 26;
			optional uint32 packetsRetransmitted = 27;
			optional uint32 packetsSent = 28;
			optional uint32 payloadType = 29;
			optional uint32 pliCount = 30;
			optional string rid = 31;
			optional double roundTripTime = 32;
			optional uint32 rtcpRrReceived = 33;
			optional uint32 rtcpSrSent = 34;
			optional uint32 rtxPacketsDiscarded = 35;
			optional uint32 rtxPacketsSent = 36;
			optional uint64 rtxSsrc = 37;
			optional string sdpFmtpLine = 38;
			optional uint32 sliCount = 39;
			optional uint32 targetBitrate = 40;
			optional string trackId = 41;
			optional bool voiceActivityFlag = 42;
		}
		message SfuSctpChannel {
			required string channelId = 1;
			required string streamId = 2;
			required string transportId = 3;
			optional uint64 bytesReceived = 4;
			optional uint64 bytesSent = 5;
			optional string label = 6;
			optional uint32 messageReceived = 7;
			optional uint32 messageSent = 8;
			optional bool noReport = 9;
			optional string protocol = 10;
			optional double sctpCongestionWindow = 11;
			optional uint32 sctpMtu = 12;
			optional double sctpReceiverWindow = 13;
			optional double sctpSmoothedRoundTripTime = 14;
			optional uint32 sctpUnackData = 15;
		}
		message SfuExtensionStats {
			required string payload = 1;
			required string type = 2;
		}
		repeated SfuExtensionStats extensionStats = 1;
		repeated SfuInboundRtpPad inboundRtpPads = 2;
		repeated SfuOutboundRtpPad outboundRtpPads = 3;
		repeated SfuSctpChannel sctpChannels = 4;
		repeated SfuTransport transports = 5;
		required string sfuId = 6;
		required uint64 timestamp = 7;
		optional string marker = 8;
		optional uint32 timeZoneOffsetInHours = 9;
	}
	message TurnSample {
		message TurnSession {
			required string sessionId = 1;
			optional uint32 averageReceivingBitrateFromClient = 2;
			optional uint32 averageReceivingBitrateFromPeer = 3;
			optional uint32 averageSendingBitrateToClient = 4;
			optional uint32 averageSendingBitrateToPeer = 5;
			optional string clientId = 6;
			optional string clientTransportProtocol = 7;
			optional uint64 nonceExpirationTime = 8;
			optional string peerAddress = 9;
			optional uint32 peerPort = 10;
			optional string realm = 11;
			optional uint64 receivedBytesFromClient = 12;
			optional uint64 receivedBytesFromPeer = 13;
			optional uint32 receivedPacketsFromClient = 14;
			optional uint32 receivedPacketsFromPeer = 15;
			optional string relayTransportProtocol = 16;
			optional uint64 sentBytesToClient = 17;
			optional uint64 sentBytesToPeer = 18;
			optional uint32 sentPacketsToClient = 19;
			optional uint32 sentPacketsToPeer = 20;
			optional string serverAddress = 21;
			optional uint32 serverPort = 22;
			optional uint64 started = 23;
			optional string username = 24;
		}
		repeated TurnSession sessions = 1;
		required string serverId = 2;
	}
	repeated ClientSample clientSamples = 1;
	repeated SfuSample sfuSamples = 2;
	repeated TurnSample turnSamples = 3;
	optional ControlFlags controlFlags = 4;
	optional SamplesMeta meta = 5;
}
`;